<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="pref_language">prefs_language</string>
    <string name="pref_uid">prefs_uid</string>
    <string name="lang_key">langa</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="previous">Back</string>
    <string name="next">Next</string>

    <string name="retry">إعادة المحاولة</string>
    <string name="network_error">مشكلة في الشبكة</string>

    <string name="internet_not_available">الإنترنت غير متصل , تاكد من توفر خدمة الانترنت وحأول مره اخري</string>
    <string name="start">Start</string>
    <string name="header">Header</string>
    <string name="toLogin">Welcome, Please enter your email or number to login</string>
    <string name="email_number">Email / Number</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="company_organization_university">Company / Organization / University</string>
    <string name="number">Number</string>
    <string name="title">Title</string>
    <string name="search_event">Search event</string>
    <string name="please_enter">"Please enter "</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="popular">Popular</string>
    <string name="active">Active now</string>
    <string name="event_name">Event name</string>
    <string name="featured_this_week">Featured this week</string>
    <string name="khartoum_sudan">Khartoum, Sudan</string>
    <string name="about_event">BeSudan came to birth, to support and encourage the creatives of Sudan to up their game to an international level, and to offer them a chance to showcase their work, art and talents to the market around them, to their colleagues and others. It is a great opportunity for them to build a professional network and get a constructive feedback on their work.</string>
    <string name="participants">Participants:</string>
    <string name="more">More</string>
    <string name="sponsors">Sponsors:</string>
    <string name="get_tickets">Get tickets</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="_100_000">100,000</string>
    <string name="_50">50</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="scan_card">Scan card</string>
    <string name="or">Or</string>
    <string name="card_number">Card number</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="cvv">CVV</string>
    <string name="save_credit_card_information">Save credit card information</string>
    <string name="pay">Pay</string>
    <string name="besudan_2021">BeSudan 2021</string>
    <string name="besudan_event">BeSudan Event</string>
    <string name="_22_oct_2021_04_00_pm_11_30_pm" tools:ignore="TypographyDashes">22, Oct 2021 - 04:00 PM - 11:30 PM</string>
    <string name="first_last_name">First last name</string>
    <string name="graphic_designer">Graphic designer</string>
    <string name="name_gmail_com">name@gmail.com</string>
    <string name="_2499xxxxxxxxx">+2499XXXXXXXXX</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="tickets">Tickets</string>
    <string name="profile">Profile</string>
    <string name="job_description">Job description</string>
    <string name="xxxxxxxx">xxxxxx</string>
    <string name="xxxx_mail_com">xxxx@mail.com</string>
    <string name="xxxxxxxxxxxxxxxxxx">xxxxxxxxxxxxxxxxxx</string>
    <string name="art_design_creative_tech_food_health">Art,Design,Creative,Tech,Food,Health</string>
    <string name="interests">Interests</string>
    <string name="languages">Languages</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="speaker">Speaker</string>
    <string name="vote">Vote</string>
    <string name="search_by_name">Search by name ...</string>
    <string name="oct_n22">Oct\n22</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="_1">1</string>
    <string name="ticket">Ticket</string>

    <array name="on_boarding_titles">
        <item>Search event</item>
        <item>Join event</item>
        <item>Enjoy event</item>
    </array>

    <array name="tickets_type">
        <item>VIP</item>
        <item>Visitor</item>
    </array>

    <array name="year_of_birth">
        <item>YYYY</item>
        <item>"2005"</item>
        <item>"2004"</item>
        <item>"2003"</item>
        <item>"2002"</item>
        <item>"2001"</item>
        <item>"2000"</item>
        <item>"1999"</item>
        <item>"1998"</item>
        <item>"1997"</item>
        <item>"1996"</item>
        <item>"1995"</item>
        <item>"1994"</item>
        <item>"1993"</item>
        <item>"1992"</item>
        <item>"1991"</item>
        <item>"1990"</item>
        <item>"1989"</item>
        <item>"1988"</item>
        <item>"1987"</item>
        <item>"1986"</item>
        <item>"1985"</item>
        <item>"1984"</item>
        <item>"1983"</item>
        <item>"1982"</item>
        <item>"1981"</item>
        <item>"1980"</item>
        <item>"1979"</item>
        <item>"1978"</item>
        <item>"1977"</item>
        <item>"1976"</item>
        <item>"1975"</item>
        <item>"1974"</item>
        <item>"1973"</item>
        <item>"1972"</item>
        <item>"1971"</item>
        <item>"1970"</item>
        <item>"1969"</item>
        <item>"1968"</item>
        <item>"1967"</item>
        <item>"1966"</item>
        <item>"1965"</item>
        <item>"1964"</item>
        <item>"1962"</item>
        <item>"1961"</item>
        <item>"1960"</item>
        <item>"1959"</item>
        <item>"1958"</item>
        <item>"1957"</item>
        <item>"1956"</item>
        <item>"1955"</item>
        <item>"1954"</item>
        <item>"1953"</item>
        <item>"1952"</item>
        <item>"1951"</item>
        <item>"1950"</item>
        <item>"1949"</item>
        <item>"1948"</item>
        <item>"1947"</item>
        <item>"1946"</item>
        <item>"1945"</item>
        <item>"1944"</item>
        <item>"1943"</item>
        <item>"1942"</item>
        <item>"1941"</item>
        <item>"1940"</item>
    </array>

    <array name="month_of_birth">
        <item>MM</item>
        <item>"01"</item>
        <item>"02"</item>
        <item>"03"</item>
        <item>"04"</item>
        <item>"05"</item>
        <item>"06"</item>
        <item>"07"</item>
        <item>"08"</item>
        <item>"09"</item>
        <item>"10"</item>
        <item>"11"</item>
        <item>"12"</item>
    </array>

</resources>