<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/ten_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_gravity="center_vertical"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:cardCornerRadius="@dimen/ten_dp">

            <ImageView
                android:id="@+id/image_participant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/popular_event" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_participant_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_last_name"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:id="@+id/tv_participant_job_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/job_description"
                android:textSize="@dimen/fourteen_sp" />

            <TextView
                android:id="@+id/tv_participant_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/speaker"
                android:textSize="@dimen/twelve_sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_vote"
            android:layout_width="@dimen/twenty_dp"
            android:layout_height="@dimen/forty_dp"
            android:layout_gravity="center_vertical"
            android:layout_weight=".5"
            android:backgroundTint="@color/cyan_200"
            app:cardCornerRadius="@dimen/twelve_dp"
            tools:ignore="UnusedAttribute">

            <TextView
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/ten_dp"
                android:text="@string/vote"
                android:textColor="@color/purple_900"
                android:textSize="@dimen/sixteen_sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <View
        android:id="@+id/bio_about_separator"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/grayColor200"/>

</LinearLayout>