<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboarding_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        android:id="@+id/worm_dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2x"
        app:dotsColor="@color/white"
        app:dotsCornerRadius="4dp"
        app:dotsSize="8dp"
        app:dotsSpacing="2dp"
        app:dotsStrokeColor="@color/white"
        app:dotsStrokeWidth="1px"
        app:dotsWidthFactor="1.8"
        app:layout_constraintBottom_toBottomOf="@id/onboarding_viewpager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"
        app:progressMode="true" />


    <TextView
        android:id="@+id/onboarding_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:text="@string/next"
        android:textColor="@color/cyan_200"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/onboarding_btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        style="@style/Widget.AppCompat.ActionButton"
        android:padding="16dp"
        android:visibility="gone"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/onboarding_btn_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="16dp"
        style="@style/Widget.AppCompat.ActionButton"
        android:text="@string/previous"
        android:visibility="visible"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/Widget.AppCompat.ActionButton"
        android:id="@+id/onboarding_btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/appToolbarDark"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/skip"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>